--- a/.gitattributes
+++ b/.gitattributes
@@ -1,21 +1,8 @@
-.gitattributes eol=lf
-.gitmodules eol=lf
-.gitignore eol=lf
-Dockerfile eol=lf
-Makefile eol=lf
-LICENSE eol=lf
-*.files eol=lf
-*.meta eol=lf
-*.info eol=lf
-*.json eol=lf
-*.yml eol=lf
-*.tid eol=lf
-*.txt eol=lf
-*.md eol=lf
-*.sh eol=lf
-*.png filter=lfs diff=lfs merge=lfs -text
+* text=input eol=lf
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+*.dat filter=lfs diff=lfs merge=lfs -text
